syntax = "proto3";
option optimize_for = SPEED;
option java_package = "com.dream.cube.tcp";

/*
C++_TYPE	proto_TYPE
float		float
char*		string
bytes		string
int8		int32
int		    int32
int16		int32
int32		int32
uint8		uint32
uint16		uint32
uint32		uint32
int64		int64
uint64		uint64
bool 		bool
string 		string
*/

/*
repeated	array
*/

/*
protoc --cpp_out=.  this.proto
*/

import "Common.proto";

message CMDLogonClientInf
{
	uint32	userid		= 1;
	uint32	mobile		= 2;
	uint32	logontime	= 3;
	uint32	connid		= 4;
	string	uuid		= 5;
}

message CMDLogonClientInfLst
{
	repeated CMDLogonClientInf userInfLst = 1;
}

message CMDTransferMicState
{
	int32 micRunUserID	= 1;
	int32 micToUserID	= 2;
	int32 micGroupID	= 3;
	int32 micIndex		= 4;
	int32 micState		= 5;
	int32 inviteMicRunID	= 6;
	int32 inviteMicToID		= 7;
	int32 inviteMicSessionID= 8;
	uint32 userID		= 9;
}

//Sub_Vchat_ClientExistNot = 363, 踢人用户下线通知--给客户端
/*踢出协议*/
message CMDUserKickOffLine
{
    uint32 reasonid		= 1;	//踢出原因
    string newsessionUUID	= 2;	//新sessionid的mac
}

//Sub_Vchat_UserGroupLstResp = 364, 用户所在的组响应
/*User相关的群信息*/
message CMDGroupInfo
{
	uint32	groupid		= 1;	//群ID
	string	groupName	= 2;	//群名称
	string	grouphead	= 3;	//群头像
	uint32	showid		= 4;	//群显示ID
	uint32  muteSet		= 5;	//群消息免打扰设置
	uint32	roleType	= 6;	//群角色
	uint32	memberCount	= 7;	//成员数
	uint32	visitCount	= 8;	//围观数
}

/*User相关的群列表*/
message CMDUserGroupInfo
{
	repeated CMDGroupInfo grouplst	= 1;	//群列表
}

//Sub_Vchat_UserModInfoReq = 365, 用户修改信息
/*修改User信息协议*/
message CMDUserModInfoReq
{
	uint32		userID		= 1;	//玩家ID
	CMDString	userAlias	= 2;	//玩家昵称
	CMDString	headAdd		= 3;	//玩家用户头像地址
	CMDString	birthday	= 4;	//玩家生日
	CMDString	city		= 5;	//玩家城市
	CMDString	sign		= 6;	//玩家签名
}

//Sub_Vchat_UserModInfoResp = 366, 用户修改信息响应
message CMDUserModInfoResp
{
	uint32	userID		= 1;	//玩家ID
	CMDErrCode errInfo	= 2;	//修改结果 0-成功 2012-ERR_CODE_USER_MODINFO_ERR
}

//Sub_Vchat_UserModInfoNotify = 371, 群成员信息更新通知
message CMDUserInfoModNotify
{
	uint32		userID		= 1;	//玩家ID
	CMDString	userAlias	= 2;	//玩家昵称
	CMDString	headAdd		= 3;	//玩家用户头像地址
	CMDUInt32	roleType	= 4;	//玩家角色身份变更
	CMDGroupInfo	groupInfo	= 6;	//群ID
}

enum e_Friendship_OpType
{
	OPTYPE_UNFOLLOW = 0;	//取消关注
	OPTYPE_FOLLOW = 1;		//关注用户
	OPTYPE_UNBLOCK = 2;		//取消黑名单
	OPTYPE_BLOCK = 3;		//拉入黑名单
}

//Sub_Vchat_OperFriendshipReq	=367,  用户关系操作
message CMDOperFriendshipReq
{
	uint32 userid	= 1;	//用户id
	uint32 dstuid	= 2;	//操作对象
	e_Friendship_OpType action	= 3;	//操作类型	
}

//Sub_Vchat_OperFriendshipResp	=368,	用户关系操作反馈
message CMDOperFriendshipResp
{
	CMDErrCode errInfo	= 1;	//错误码
	uint32 dstuid		= 2;	//操作对象
	e_Friendship_OpType action		= 3;	//操作类型
}

//Sub_Vchat_QryUserAttentionList	=369,	查询用户关注列表
message CMDQryUserAttentionList
{
	uint32 userid	= 1;	//用户id
}

//Sub_Vchat_UserAttentionList		=370,	用户关注列表
message CMDUserAttentionList
{
	uint32 userid			= 1;	//用户id
	repeated uint32 list	= 2;	//关注列表
}

//Sub_Vchat_UserSysConfigNotify		=372,   系统配置通知
message CMDUserSysConfigNotify
{
	string sysconfig		= 1;	//系统配置内容
}
message CMDUserLocateInfo
{
	uint32 userid	= 1;
	double longitude = 2;
	double latitude = 3;
}
message CMDUserLocationResp
{
	uint32 userid	= 1;
	repeated CMDUserLocateInfo nearlist = 2;
}
